--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "linked_list"
-version = "0.2.0"
+version = "0.1.0"
 edition = "2021"
 authors = ["Wedson Almeida Filho <wedsonaf@google.com>", "WeiKang Guo <guoweikang.kernel@gmail.com>"]
 description = "Linked lists that supports arbitrary removal in constant time"
 license = "GPL-2.0-or-later"
 homepage = "https://github.com/arceos-org/arceos"
 repository = "https://github.com/arceos-org/linked_list"
-documentation = "https://arceos-org.github.io/linked_list"
+documentation = "https://docs.rs/linked_list"
+keywords = ["list"]
+categories = ["no-std", "rust-patterns"]
 
 [dependencies]
