Guoweikang/linked list (#1)
* Synchronize r4l linked_lists latest code, update to v0.2.0

--------
1 Add List sample code
2 Add more test case
3 Remove iter_back, can directly use iter().rev()
4 Add def_node  to make it easier to use
5 remove unused unsafe_list source code
6 node support innner() and into_inner()
7 Directly use vis in macro
8  Repo name  from linked_list to linked_list_r4l
8 Linked list push to crates-io and update to v0.2.0

Signed-off-by: guoweikang <guoweikang.kernel@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "linked_list"
-version = "0.1.0"
+name = "linked_list_r4l"
+version = "0.2.0"
 edition = "2021"
-authors = ["Wedson Almeida Filho <wedsonaf@google.com>"]
+authors = ["Wedson Almeida Filho <wedsonaf@google.com>", "WeiKang Guo <guoweikang.kernel@gmail.com>"]
 description = "Linked lists that supports arbitrary removal in constant time"
 license = "GPL-2.0-or-later"
 homepage = "https://github.com/arceos-org/arceos"
-repository = "https://github.com/arceos-org/linked_list"
-documentation = "https://arceos-org.github.io/linked_list"
+repository = "https://github.com/arceos-org/linked_list_r4l"
+documentation = "https://docs.rs/linked_list_r4l"
+keywords = ["list"]
+categories = ["no-std", "rust-patterns"]
 
 [dependencies]
